header styled and bugs with alignment worked out, place holder image added. transition on nav added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,26 +1,39 @@
-/*---------------------------------------------------------------------colours*/
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
+
+/*--------------------------------------------Colors*/
 
 .bg-color-name-title {
-    background-color: #585454
+    background-color: #0D1828;
 }
 
 .ui-menu-color-home {
-    background-color: #;
+    background-color: #20a8df;
 }
 
 .ui-menu-color-resume {
-    background-color: #;
+    background-color: #9B19FF;
 }
 
 .ui-menu-color-contact {
-    background-color: #;
+    background-color: #FBED20;
 }
 
 .ui-menu-color-download {
-    background-color: #;
+    background-color: #0AFF71;
 }
 
 /*---------------------------------------------------------------------paddings/margins/text*/
+
+h1,
+h2,
+h3,
+h4 {
+    margin:0;
+}
+
+.inline-block {
+    display: inline-block;
+}
 
 /*---------------------------------------------------------------------heading*/
 
@@ -33,11 +46,28 @@ header {
 }
 
 .logo {
-    background: url(#);
+    background: url("../images/Penguins.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     min-height:360px;
+}
+
+.name {
+    font-family: "Exo", sans-serif;
+    font-weight: 100;
+    font-size: 50px;
+    margin-top: 50px;
+    color: #fff;
+}
+
+.title {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-size: 35px;
+    margin-top: 20px;
+    margin-bottom: 90px;
+    color: #fff;
 }
 
 .list-inline-item:not(:last-child) {
@@ -53,7 +83,7 @@ header {
 }
 
 #nav li {
-    font-size 14px;
+    font-size: 14px;
     padding: 0;
 }
 
@@ -66,14 +96,14 @@ header {
 .menuitem a {
     width: 100%;
     text-decoration: none;
-    color: #fff;
+    color: #0D1828;
     height: 120px;
 }
 
 .menuitem a i {
     padding-top: 22px;
     display: block;
-    color: #fafafa;
+    color: #0D1828;
     font-size: 26px;
 }
 
@@ -91,3 +121,7 @@ header {
 
 
 /*---------------------------------------------------------------------hover*/
+
+.hvr-sweep-to-bottom:before {
+    background: rgba(0, 0, 0, 0.2);
+}
